src/test/ui/compile-fail-migration/borrowck/borrowck-struct-update-with-dtor.mir.stderr
error[E0509]: cannot move out of type `S`, which implements the `Drop` trait
  --> $DIR/borrowck-struct-update-with-dtor.rs:25:15
   |
LL |     let _s2 = S{a: 2, ..s0};
   |               ^^^^^^^^^^^^^ cannot move out of here

error[E0509]: cannot move out of type `T`, which implements the `Drop` trait
  --> $DIR/borrowck-struct-update-with-dtor.rs:31:15
   |
LL |     let _s2 = T{a: 2, ..s0};
   |               ^^^^^^^^^^^^^ cannot move out of here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0509`.
